--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,30 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer{
+margin-top: 20px;
+display: flex;
+flex-direction: row;
+align-items: center;
+text-align: center;
+gap: 12px;
+}
+
+.field {
+display: flex;
+flex-direction: column;
+align-items:center;
+text-align: center;
+
+}
+
+.value {
+  font-size: 26px;
+  font-weight: 400;
+}
+
+.label {
+  font-size: 14px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+}
